add project title

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   
-  "homepage": "https://nsegim.github.io/trinity-metals",
+  "homepage": "https://nsegim.github.io/trinity-metals/",
   "name": "trinity-web",
   "private": true,
   "version": "0.0.0",
