--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dev": "vite",
   
     
-  "build": "vite build",
+  "build": "vite build && cp ./dist/index.html ./dist/404.html",
   
     
   "lint": "eslint .",
