--- a/package.json
+++ b/package.json
@@ -35,6 +35,18 @@
   "dependencies": {
   
     
+  "@emotion/react": "^11.14.0",
+  
+    
+  "@emotion/styled": "^11.14.0",
+  
+    
+  "@mui/icons-material": "^6.4.1",
+  
+    
+  "@mui/material": "^6.4.1",
+  
+    
   "@react-google-maps/api": "^2.20.3",
   
     
