--- a/package.json
+++ b/package.json
@@ -50,7 +50,19 @@
   "@react-google-maps/api": "^2.20.3",
   
     
+  "axios": "^1.7.9",
+  
+    
   "bootstrap": "^5.3.3",
+  
+    
+  "cors": "^2.8.5",
+  
+    
+  "dompurify": "^3.2.4",
+  
+    
+  "moment": "^2.30.1",
   
     
   "react": "^18.3.1",
