--- a/package.json
+++ b/package.json
@@ -62,6 +62,15 @@
   "dompurify": "^3.2.4",
   
     
+  "i18next": "^24.2.2",
+  
+    
+  "i18next-browser-languagedetector": "^8.0.4",
+  
+    
+  "i18next-http-backend": "^3.0.2",
+  
+    
   "moment": "^2.30.1",
   
     
@@ -72,6 +81,15 @@
   
     
   "react-dom": "^18.3.1",
+  
+    
+  "react-dropzone": "^14.3.8",
+  
+    
+  "react-hook-form": "^7.54.2",
+  
+    
+  "react-i18next": "^15.4.1",
   
     
   "react-router-dom": "^7.1.0"
@@ -111,7 +129,7 @@
   "globals": "^15.13.0",
   
     
-  "vite": "^6.0.3"
+  "vite": "^6.1.0"
   
   }
 }
