--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   
-  "homepage": "https://nsegim.github.io/the-trinity-metals/",
+  "homepage": "https://trinity-metals.com/new/",
   
   "name": "trinity-web",
   
@@ -33,6 +33,9 @@
   },
   
   "dependencies": {
+  
+    
+  "@emailjs/browser": "^4.4.1",
   
     
   "@emotion/react": "^11.14.0",
