--- a/package.json
+++ b/package.json
@@ -3,135 +3,225 @@
   
   "name": "trinity-web",
   
+  
   "private": true,
+  
   
   "version": "0.0.0",
   
+  
   "type": "module",
+  
   
   "scripts": {
   
+  
     
+  
   "dev": "vite",
   
+  
     
+  
   "build": "vite build && cp ./dist/index.html ./dist/404.html",
   
+  
     
+  
   "lint": "eslint .",
   
+  
     
+  
   "preview": "vite preview",
   
+  
     
+  
   "predeploy": "npm run build",
   
+  
     
+  
   "deploy": "gh-pages -d dist"
   
+  
   },
+  
   
   "dependencies": {
   
+  
     
+  
   "@emailjs/browser": "^4.4.1",
   
+  
     
+  
   "@emotion/react": "^11.14.0",
   
+  
     
+  
   "@emotion/styled": "^11.14.0",
   
+  
     
+  
   "@mui/icons-material": "^6.4.1",
   
+  
     
+  
   "@mui/material": "^6.4.1",
   
+  
     
+  
   "@react-google-maps/api": "^2.20.3",
   
+  
     
+  
   "axios": "^1.7.9",
   
+  
     
+  
   "bootstrap": "^5.3.3",
   
+  
     
+  
   "cors": "^2.8.5",
   
+  
     
+  
   "dompurify": "^3.2.4",
   
+  
     
+  
   "i18next": "^24.2.2",
   
+  
     
+  
   "i18next-browser-languagedetector": "^8.0.4",
   
+  
     
+  
   "i18next-http-backend": "^3.0.2",
   
+  
     
+  
   "moment": "^2.30.1",
   
+  
     
+  
   "react": "^18.3.1",
   
+  
     
+  
   "react-bootstrap": "^2.10.7",
   
+  
     
+  
   "react-dom": "^18.3.1",
   
+  
     
+  
   "react-dropzone": "^14.3.8",
   
+  
     
+  
   "react-hook-form": "^7.54.2",
   
-    
-  "react-i18next": "^15.4.1",
   
     
+  
+  "react-i18next": "^15.4.1",
+  
+  
+    
+  
   "react-router-dom": "^7.1.0"
+  
   
   },
   
+  
   "devDependencies": {
   
+  
     
+  
   "@eslint/js": "^9.17.0",
   
+  
     
+  
   "@types/react": "^18.3.17",
   
+  
     
+  
   "@types/react-dom": "^18.3.5",
   
+  
     
+  
   "@vitejs/plugin-react-swc": "^3.5.0",
   
+  
     
+  
   "eslint": "^9.17.0",
   
+  
     
+  
   "eslint-plugin-react": "^7.37.2",
   
+  
     
+  
   "eslint-plugin-react-hooks": "^5.0.0",
   
+  
     
+  
   "eslint-plugin-react-refresh": "^0.4.16",
   
+  
     
+  
   "gh-pages": "^6.2.0",
   
-    
-  "globals": "^15.13.0",
   
     
+  
+  "globals": "^15.13.0",
+  
+  
+    
+  
+  "rollup-plugin-visualizer": "^6.0.5",
+  
+  
+    
+  
   "vite": "^6.1.0"
+  
   
   }
 }
